tests/lexer/valid/07_operators_logical.src
// Логические операторы
&& || !
x && y
a || b
!flag