tests/lexer/invalid/test_invalid_operator.src
// Тест 7: Неправильные операторы
x & y
x | y
x ^ y
x ~ y